from concurrent import futures
import grpc
import shopping_platform_pb2
import shopping_platform_pb2_grpc

class MarketService(shopping_platform_pb2_grpc.MarketServiceServicer):
    def __init__(self):
        self.sellers = {}  # Dictionary to store seller info
        self.items = {}  # Dictionary to store item info
        self.item_id_counter = 1  # Counter to assign unique IDs to items

    def RegisterSeller(self, request, context):
        # Logic to register a seller
        pass

    def SellItem(self, request, context):
        # Logic for a seller to add an item
        pass

    def UpdateItem(self, request, context):
        # Logic for a seller to update an item
        pass

    def DeleteItem(self, request, context):
        # Logic for a seller to delete an item
        pass

    def DisplaySellerItems(self, request, context):
        # Logic for displaying a seller's items
        pass

    def SearchItem(self, request, context):
        # Logic for buyers to search for items
        pass

    def BuyItem(self, request, context):
        # Logic for buyers to purchase an item
        pass

    def AddToWishlist(self, request, context):
        # Logic for adding an item to a buyer's wishlist
        pass

    def RateItem(self, request, context):
        # Logic for rating an item
        pass

    def NotifyClient(self, request_iterator, context):
        # Logic for sending notifications to clients
        pass

def serve():
    server = grpc.server(futures.ThreadPoolExecutor(max_workers=10))
    shopping_platform_pb2_grpc.add_MarketServiceServicer_to_server(MarketService(), server)
    server.add_insecure_port('[::]:50051')
    server.start()
    server.wait_for_termination()

if __name__ == '__main__':
    serve()
